--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -783,7 +783,7 @@ margin-bottom: 16px !important; /* ✅ reduce gap below intro paragraph */
   margin: 0;
 }
 
-/* ===========Institutional Capability – Horizontal Cards=========/*
+/* ===========Institutional Capability – Horizontal Cards=========*/
 
 .capability-row {
   margin-bottom: 50px;
