--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1449,10 +1449,10 @@ font-size: 18px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: 14px 34px;     /* taller button: 16px top/bottom */
+ padding: 14px 42px;
   min-height: 50px;       /* ensures a consistent height */
-  font-size: 1.2rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 600;
   border-radius: 999px;
   background-color: #14b8a6;
   color: #fff;
