--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1281,12 +1281,12 @@ font-size: 18px;
   border-radius: 50%;
   object-fit: cover;
    object-position: top center;
-    margin-bottom: 1rem;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   border: 5px solid #9C7C4C; /* Lakeside Gold border */
   transition: transform 0.3s ease;
 }
-.founder:hover .founder-img {
+
+.founder-card:hover .founder-imgage {
   transform: scale(1.05);
 }
 
