--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1271,6 +1271,10 @@ font-size: 18px;
   border-right: 1px solid rgba(0, 21, 64, 0.08);
 }
 
+.founder-card:first-child .founder-image {
+  margin-top: 12px;
+}
+
 .founder-card:last-child {
   padding-left: 40px;
 }
